feat: added link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="main-body">
             
                 <div class="play-button-parent">
-                    <a href="#">
+                    <a href="https://teamwoodgames.com/">
                         <h1 id="play-free">Play For Free</h1>
                     </a>
                 </div>
